# multio

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: multio-import.cmake.in
docs/: DoxyfileFortran.in  tagfile.tag
src/ecom/common/: om_general_utils_c.c  om_general_utils_mod.F90
src/ecom/config_example/: output-manager-config.yaml
src/ecom/containers/: circular_buffer_mod.F90  map_mod.F90
src/ecom/flavours/: gribx2multio_raw_output_manager_mod.F90
src/ecom/grib_info/: encoding_info_mod.F90  general_rules_mod.F90  grib2_encoder_mod.F90  grib_section_mod.F90  yaml_core_utils_mod.F90
src/multio/: CMakeLists.txt  multio_config.h.in
src/multio/action/: CMakeLists.txt  Plan.cc
src/multio/api/: CMakeLists.txt  multio_api.F90  multio_api.f90  multio_base_handle_mod.F90  multio_c.cc  multio_c.h  multio_config.f90.in  multio_configuration_mod.F90  multio_constants_mod.F90  multio_data_mod.F90  multio_debug_fapi.h  multio_debug_fapi.h.in  multio_error_handling_mod.F90  multio_handle_mod.F90  multio_metadata_mod.F90  multio_new_api.F90  multio_utils_mod.F90
src/multio/config/: PlanBuilder.cc  PlanBuilder.h  PlanConfigurator.cc
src/multio/ifsio/: ifsio.cc
src/multio/server/: Dispatcher.cc  MultioClient.cc
src/multio/sink/: DataSink.cc
src/multio/tools/: CMakeLists.txt  multio-encode-ocean.cc  multio-feed.cc  multio-hammer.cc  multio-replay-nemo-capi-partial-agg.cc  multio-replay-nemo-capi.cc  multio-replay-nemo-fapi.f90  multio-statistics-stress-test.cc
src/multio/util/: CastUtils.h  ParallelPolicies.h  Substitution.cc  Substitution.h
src/multiom/: CMakeLists.txt
src/multiom.bkp/: CMakeLists.txt
src/multiom.bkp/common/: enumerators_mod.F90
src/multiom.bkp/containers/: CMakeLists.txt
src/multiom.bkp/data-structures/: fortran_message_mod.F90.bkp  parametrization_mod.F90.bkp
src/multiom.bkp/filters/: filter_composed_mod.F90  filter_direction_mod.F90  filter_factory_mod.F90  filter_frequency_mod.F90  filter_is_aerosol_mod.F90  filter_is_chemical_mod.F90  filter_is_chemical_optical_mod.F90  filter_model_mod.F90  filter_param_mod.F90
src/multiom.bkp/grib/: grib_encoder_factory_mod.F90.bkp  metadata_base_mod.F90
src/multiom.bkp/grib/grib2/: grib2_encoder_mod.F90  grib2_encoder_mod.F90.bkp
src/multiom.bkp/grib/grib2/grib2_section0/: grib2_section0_factory_mod.F90
src/multiom.bkp/grib/grib2/grib2_section2/: grib2_section2_001_mod.F90  grib2_section2_015_mod.F90  grib2_section2_015_mod.F90.bkp  grib2_section2_018_mod.F90  grib2_section2_023_mod.F90  grib2_section2_024_mod.F90  grib2_section2_026_mod.F90  grib2_section2_027_mod.F90  grib2_section2_027_mod.F90.bkp  grib2_section2_192_mod.F90  grib2_section2_192_mod.F90.bkp
src/multiom.bkp/grib/grib2/grib2_section3/: grib2_section3_101_mod.F90
src/multiom.bkp/grib/grib2/grib2_section4/: grib2_section4_000_mod.F90.bkp  grib2_section4_001_mod.F90  grib2_section4_011_mod.F90  grib2_section4_011_mod.F90.bkp  grib2_section4_032_mod.F90  grib2_section4_040_mod.F90  grib2_section4_041_mod.F90  grib2_section4_041_mod.F90.bkp  grib2_section4_043_mod.F90  grib2_section4_044_mod.F90  grib2_section4_046_mod.F90  grib2_section4_047_mod.F90  grib2_section4_099_mod.F90  grib2_section4_103_mod.F90  grib2_section4_103_mod.F90.bkp  grib2_section4_factory_mod.F90
src/multiom.bkp/grib/grib2/grib2_section4/grib2_level_configurator/: grib2_level_configurator_000_mod.F90.bkp  grib2_level_configurator_001_mod.F90  grib2_level_configurator_001_mod.F90.bkp  grib2_level_configurator_005_mod.F90.bkp  grib2_level_configurator_008_mod.F90  grib2_level_configurator_009_mod.F90  grib2_level_configurator_009_mod.F90.bkp  grib2_level_configurator_010_mod.F90  grib2_level_configurator_013_mod.F90  grib2_level_configurator_014_mod.F90  grib2_level_configurator_014_mod.F90.bkp  grib2_level_configurator_015_mod.F90.bkp  grib2_level_configurator_017_mod.F90  grib2_level_configurator_020_mod.F90  grib2_level_configurator_020_mod.F90.bkp  grib2_level_configurator_021_mod.F90  grib2_level_configurator_022_mod.F90  grib2_level_configurator_023_mod.F90  grib2_level_configurator_027_mod.F90  grib2_level_configurator_027_mod.F90.bkp  grib2_level_configurator_028_mod.F90  grib2_level_configurator_028_mod.F90.bkp  grib2_level_configurator_030_mod.F90  grib2_level_configurator_031_mod.F90.bkp  grib2_level_configurator_032_mod.F90  grib2_level_configurator_034_mod.F90  grib2_level_configurator_035_mod.F90  grib2_level_configurator_040_mod.F90  grib2_level_configurator_041_mod.F90  grib2_level_configurator_042_mod.F90  grib2_level_configurator_043_mod.F90  grib2_level_configurator_043_mod.F90.bkp  grib2_level_configurator_044_mod.F90  grib2_level_configurator_046_mod.F90.bkp  grib2_level_configurator_047_mod.F90  grib2_level_configurator_048_mod.F90  grib2_level_configurator_049_mod.F90  grib2_level_configurator_050_mod.F90  grib2_level_configurator_051_mod.F90  grib2_level_configurator_052_mod.F90  (+25 more)
src/multiom.bkp/grib/grib2/grib2_section4/grib2_time_configurator/: grib2_time_configurator_000_mod.F90  grib2_time_configurator_001_mod.F90  grib2_time_configurator_002_mod.F90  grib2_time_configurator_002_mod.F90.bkp  grib2_time_configurator_factory_mod.F90
src/multiom.bkp/grib/grib2/grib2_section5/: grib2_section5_000_mod.F90  grib2_section5_042_mod.F90  grib2_section5_051_mod.F90  grib2_section5_051_mod.F90.bkp
src/multiom.bkp/grib/grib2/grib2_section6/: grib2_section6_000_mod.F90.bkp
src/multiom.bkp/hooks/debug/: debug_mod.F90  debug_mod.mod
src/multiom.bkp/plans/: plan_mod.F90.bkp  specialized_plan_mod.F90.bkp
src/multiom.bkp/rules/: rules_mod.F90
src/multiom.bkp/test/: test_read01_prog.F90  test_read02_prog.F90  test_read03_prog.F90
src/multiom.bkp/trash/: filter_composed_mod.F90.bkp
src/multiom/bkp.00/: debug_mod.F90.bkp  encoding_info_manager_mod.F90.bkp  (+38 more)
tests/: CMakeLists.txt
tests/across/: CMakeLists.txt  plan_multiple_requests.yaml  plan_single_request.yaml
tests/multio/: test_multio_capi.cc  test_multio_fapi_general.f90
tests/nextGEMS/: multio-model-configuration.sh  multio-server-ifsio.yaml  multio-server.yaml
(+1390 files in other folders)
